Fix overflow issue caused by infinite scroll component

--- a/src/pages/Playlist/Playlist.css
+++ b/src/pages/Playlist/Playlist.css
@@ -46,6 +46,7 @@
         gap: calc(var(--_playlist-gap) / 2);
 
         list-style: none;
+        overflow: visible !important;
       }
     }
   }
